test/parsing/ferguson/reserved-bool.chpl
var bool = 0;

proc f(bool) {
}

class bool {
  var bool =0;
}

type bool = string;

proc bool() {
}

proc test() {
  try {
  } catch bool {
  }
}
